2012-02-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c (genAssign): fixed bug #3463343
	* support/regression/tests/gcc-torture-execute-string-opt-5.c:
	  reenabled for ds390

2012-02-26 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: documented support for 16f720/16f721

2012-02-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-stdarg-4.c:
	  reenabled for ds390

2012-02-25 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, Makefile.in, sdcc.sln,
	  doc/sdccman.lyx, support/sdranlib/*: support\sdranlib removed
	* .version, doc/sdccman.lyx: bumped version to 3.1.3

2012-02-25 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/pic16f720.h,
	  device/non-free/include/pic14/pic16f721.h,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic16f720.c,
	  device/non-free/lib/pic14/libdev/pic16f721.c:
	  added support for 16f720/16f721

	* device/non-free/include/pic14/pic14regs.h:
	  fixed to use __SDCC_PROCESSOR instead of SDCC_PROCESSOR

	* device/non-free/lib/pic16/libdev/testall.sh:
	  test support for all devices by compiling a source file

2012-02-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: fixed bug #3473062
	* src/z80/gen.c (genCmpGt, genCmpLt),
	  src/hc08/gen.c (genCmp, genCmpEQorNE),
	  src/pic16/gen.c (genCmpGt, genCmpLt),
	  src/pic14/gen.c (genCmpGt, genCmpLt): fixed bug #3487025

2012-02-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pr42833.c:
	  Disable test for all gcc versions earlier than 5.0.

2012-02-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (createDo): fixed bug #3489326

2012-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c: